k8s/aut-sys/apps/authentik/manifests/authentik-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: &labels
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: worker
  name: authentik-worker
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      priorityClassName: custom-high
      serviceAccountName: authentik
      terminationGracePeriodSeconds: 30
      containers:
        - name: authentik-worker
          image: ghcr.io/goauthentik/server
          imagePullPolicy: IfNotPresent
          args:  [ worker ]
          livenessProbe:
            timeoutSeconds: 15
            exec:
              command: [ ak, healthcheck ]
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
            exec:
              command: [ ak, healthcheck ]
          resources:
            requests:
              cpu: "100m"
            limits:
              memory: "4Gi"
