k8s/aut-sys/apps/authentik/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls-auth.aut-sys.de
      hosts: [ auth.aut-sys.de ]
  rules:
    - host: auth.aut-sys.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
